# 3cb-gauntlet-builder

./: .gitignore  README.md  app.py  nash.py  pyproject.toml  sheets_integration.py
data/: swift.csv
